# bettercap-gui

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bettercap/: README.md
docs/: README.md
src/bettercap_gui/: __init__.py  __main__.py
src/bettercap_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_gui.py
